--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,10 @@
             android:text="CREAR CUENTA DE CORREO ELECTRONICO"
             android:textSize="17dp"
             android:textStyle="bold"
-            tools:layout_editor_absoluteX="38dp"
-            tools:layout_editor_absoluteY="39dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
@@ -107,83 +109,91 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="150dp"
+        android:layout_marginBottom="40dp"
         android:text="Button"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="646dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
         android:layout_width="200dp"
         android:layout_height="45dp"
+        android:layout_marginStart="108dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="@+id/textView2"
-        tools:layout_editor_absoluteX="195dp" />
+        app:layout_constraintVertical_bias="0.307" />
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="200dp"
         android:layout_height="45dp"
+        android:layout_marginStart="96dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.538"
-        tools:layout_editor_absoluteX="195dp" />
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="@+id/textView3" />
 
     <EditText
         android:id="@+id/editTextDate"
         android:layout_width="200dp"
         android:layout_height="45dp"
+        android:layout_marginStart="36dp"
         android:ems="10"
         android:inputType="date"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.576"
-        tools:layout_editor_absoluteX="195dp" />
+        app:layout_constraintVertical_bias="0.461" />
 
     <EditText
         android:id="@+id/editTextNumber"
         android:layout_width="200dp"
         android:layout_height="45dp"
+        android:layout_marginStart="108dp"
         android:ems="10"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toTopOf="@+id/textView5"
-        app:layout_constraintVertical_bias="0.653"
-        tools:layout_editor_absoluteX="195dp" />
+        app:layout_constraintVertical_bias="0.23" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
         android:layout_width="200dp"
         android:layout_height="45dp"
+        android:layout_marginStart="112dp"
         android:ems="10"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="@+id/textView8"
+        app:layout_constraintStart_toEndOf="@+id/textView8"
         app:layout_constraintTop_toTopOf="@+id/textView8"
-        app:layout_constraintVertical_bias="0.576"
-        tools:layout_editor_absoluteX="195dp" />
+        app:layout_constraintVertical_bias="0.461" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
         android:layout_width="200dp"
         android:layout_height="45dp"
+        android:layout_marginStart="92dp"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="@+id/textView6"
-        app:layout_constraintTop_toTopOf="@+id/textView6"
-        app:layout_constraintVertical_bias="0.653"
-        tools:layout_editor_absoluteX="195dp" />
+        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintTop_toTopOf="@+id/textView6" />
 
     <EditText
         android:id="@+id/editTextTextPassword2"
         android:layout_width="200dp"
         android:layout_height="45dp"
+        android:layout_marginStart="10dp"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="@+id/textView7"
+        app:layout_constraintStart_toEndOf="@+id/textView7"
         app:layout_constraintTop_toTopOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.576"
-        tools:layout_editor_absoluteX="195dp" />
+        app:layout_constraintVertical_bias="0.576" />
 </androidx.constraintlayout.widget.ConstraintLayout>
